fix: notes text doesnt wrap

--- a/www/new-ui/templates/display-entry.css
+++ b/www/new-ui/templates/display-entry.css
@@ -282,6 +282,7 @@
     }
 
     #notes {
+        text-wrap: wrap;
         white-space: pre;
     }
 
